@@ -192,7 +192,7 @@ MSG_Page_SampleText (//)
    <b><u>HTMLview</u></b><br>\
    <small>mcc %ld.%ld<br></small>\
    <small>mcp %ld.%ld<br><br></small>\
-   Copyright 1997-2007 by Allan Odgaard<br>\
+   Copyright 1995-2000 by Allan Odgaard<br>\
    Copyright 2005-2007 HTMLview.mcc Open Source Team<br>\
    Image decoders by Gunther Nikl<br>\
   <hr>\
